@@ -10,29 +10,16 @@ import java.util.List;
 import java.util.Scanner;
 
 public class ControlProducto {
-    private List<Producto> productos;
+    private static List<Producto> productos;
     Scanner sc = new Scanner(System.in);
+    ControlProvedor cP = new ControlProvedor();
 
     public ControlProducto() {
         productos = new ArrayList<>();
 
-        ProductoConIva producto1 = new ProductoConIva(1, "Computadora",  500.0,"ASUS", Feriado.NO_FERIADO);
-        ProductoSinIva producto2 = new ProductoSinIva(2,"Sal",2.0,"Mi Sal Querida", "El producto no agraba iva");
-        ProductoConIva producto3 = new ProductoConIva(3, "Smartphone", 300.0, "Samsung", Feriado.NO_FERIADO);
-        ProductoConIva producto4 = new ProductoConIva(4, "Televisor", 800.0, "LG", Feriado.NO_FERIADO);
-        ProductoSinIva producto5 = new ProductoSinIva(5, "Agua mineral", 1.5, "Agua Pura", "Productoexento de IVA");
-        ProductoSinIva producto6 = new ProductoSinIva(6, "Arroz", 1.2, "Grano de Oro", "No grava IVA según ley");
-        ProductoConIva producto7 = new ProductoConIva(7, "Impresora", 150.0, "HP", Feriado.NO_FERIADO);
-        ProductoSinIva producto8 = new ProductoSinIva(8, "Medicamento", 10.0, "SaludTotal", "Medicamento libre de IVA");
-
-        productos.add(producto1);
-        productos.add(producto2);
-        productos.add(producto3);
-        productos.add(producto4);
-        productos.add(producto5);
-        productos.add(producto6);
-        productos.add(producto7);
-        productos.add(producto8);
+        for (Producto p:cP.getProductosTemp()){
+            productos.add(p);
+        }
 
     }
 
@@ -49,7 +36,6 @@ public class ControlProducto {
     }
 
     public void agregarProducto() {
-        ControlProvedor cP = new ControlProvedor();
         System.out.print("Ingrese la cantidad de productos a registrar: ");
         int numeroProductos = sc.nextInt();
 
@@ -71,7 +57,6 @@ public class ControlProducto {
             System.out.print("\t\t\tProveedor (Ingrese su cédula): ");
             String cedula = sc.next();
 
-
             switch (categoria){
                 case "Comida" , "Primera_necesidad" , "Agricola" , "Medicina" , "Escolar":
                     productos.add(new ProductoSinIva( id, nombre, precioUnitario, marca, "El producto no agraba iva"));
@@ -80,11 +65,15 @@ public class ControlProducto {
                     productos.add(new ProductoConIva(id, nombre, precioUnitario, marca, Feriado.NO_FERIADO));
                     break;
             }
-            if (cP.buscarProveedorPorCedula(cedula) != null) {
-                cP.buscarProveedorPorCedula(cedula).addProducto(productos.get(productos.size()-1));
+
+            Provedor temp =  cP.buscarProveedorPorCedula(cedula);
+            if (temp != null) {
+                temp.addProducto(productos.getLast());
+                cP.actualizarProveedor(temp);
             } else {
                 System.out.println("Proveedor no encontrado, producto sin proveedor");
             }
+
             System.out.println("Producto registrado correctamente.");
             System.out.println("---------------------------------------------");
         }
